ex2/README
Scala在首次定义一个变量时，必须在变量名前面添加关键字“var”或者“val”。
用“var”修饰的变量，可以重新赋予新的值，并且把原值抛弃。在后续重新赋值时，就不用再写“var”了。
而用“val”修饰的变量，则禁止被重新赋值，换句话说，就是只能读不能写的变量。

var类型的变量在重新赋值时，新值必须和旧值是同一个类型，否则会发生类型匹配错误：

        scala> var x= 1
        x: Int = 1

        scala> x=10
        x: Int = 10

        scala> x="123"
        <console>:12: error: type mismatch;
        found   : String("123")
        required: Int
            x="123"
         ^

val类型的变量则直接禁止重新赋值：

        scala> val x=1
        x: Int = 1

        scala> x=2
        <console>:12: error: reassignment to val
            x=2
                ^
Scala的变量定义具有覆盖性，也就是说，如果出现了同名的变量，则后出现的变量会覆盖前面的变量。
        scala> val x=1
        x: Int = 1

        scala> val x=12
        x: Int = 12

        scala> x
        res0: Int = 12


要注意的是，赋给变量的对象存在可变与不可变之分。
要理解到底是变量指向的对象本身发生了改变，还是变量指向了新的对象。
即使是val类型的变量，也能被赋予一个可变对象。
这个可变对象能够被重新修改，例如，给可变映射添加新的键值对。
事实上，这只是旧对象发生了改变，并未产生新的对象。

Scala提倡定义val类型的变量，因为它是函数式编程，
而函数式编程的思想之一就是传入函数的参数不应该被改变。
所以，在Scala里，所有函数的参数都必须是val类型的。
但是，Scala也允许指令式编程，因而预留了var类型的变量，尽管并不推荐使用。
